--- a/gateway/requirements.txt
+++ b/gateway/requirements.txt
@@ -22,6 +22,7 @@ jsonpointer==3.0.0
 langchain==0.3.3
 langchain-community==0.3.2
 langchain-core==0.3.10
+langchain-openai==0.2.2
 langchain-text-splitters==0.3.0
 langsmith==0.1.134
 marshmallow==3.22.0
@@ -37,12 +38,14 @@ pydantic-settings==2.5.2
 pydantic_core==2.23.4
 python-dotenv==1.0.1
 PyYAML==6.0.2
+regex==2024.9.11
 requests==2.32.3
 requests-toolbelt==1.0.0
 sniffio==1.3.1
 SQLAlchemy==2.0.35
 starlette==0.39.2
 tenacity==8.5.0
+tiktoken==0.8.0
 tqdm==4.66.5
 typing-inspect==0.9.0
 typing_extensions==4.12.2
