--- a/gateway/requirements.txt
+++ b/gateway/requirements.txt
@@ -9,7 +9,9 @@ charset-normalizer==3.4.0
 click==8.1.7
 dataclasses-json==0.6.7
 distro==1.9.0
+eval_type_backport==0.2.0
 fastapi==0.115.2
+filelock==3.16.1
 frozenlist==1.4.1
 greenlet==3.1.1
 h11==0.14.0
@@ -25,28 +27,38 @@ langchain-core==0.3.10
 langchain-openai==0.2.2
 langchain-text-splitters==0.3.0
 langsmith==0.1.134
+markdown-it-py==3.0.0
 marshmallow==3.22.0
+mdurl==0.1.2
 multidict==6.1.0
 mypy-extensions==1.0.0
 numpy==1.26.4
 openai==1.51.2
 orjson==3.10.7
 packaging==24.1
+pillow==10.4.0
 propcache==0.2.0
+pyarrow==17.0.0
 pydantic==2.9.2
 pydantic-settings==2.5.2
 pydantic_core==2.23.4
+Pygments==2.18.0
 python-dotenv==1.0.1
 PyYAML==6.0.2
 regex==2024.9.11
 requests==2.32.3
 requests-toolbelt==1.0.0
+rich==13.9.2
+shellingham==1.5.4
 sniffio==1.3.1
 SQLAlchemy==2.0.35
 starlette==0.39.2
+tabulate==0.9.0
 tenacity==8.5.0
 tiktoken==0.8.0
+together==1.3.1
 tqdm==4.66.5
+typer==0.12.5
 typing-inspect==0.9.0
 typing_extensions==4.12.2
 urllib3==2.2.3
