--- a/gateway/requirements.txt
+++ b/gateway/requirements.txt
@@ -34,6 +34,7 @@ multidict==6.1.0
 mypy-extensions==1.0.0
 numpy==1.26.4
 openai==1.51.2
+opencv-python==4.10.0.84
 orjson==3.10.7
 packaging==24.1
 pillow==10.4.0
