--- a/gateway/requirements.txt
+++ b/gateway/requirements.txt
@@ -11,6 +11,7 @@ dataclasses-json==0.6.7
 distro==1.9.0
 eval_type_backport==0.2.0
 fastapi==0.115.2
+firebase-admin==6.6.0
 filelock==3.16.1
 frozenlist==1.4.1
 greenlet==3.1.1
