--- a/gateway/requirements.txt
+++ b/gateway/requirements.txt
@@ -4,19 +4,36 @@ aiosignal==1.3.1
 annotated-types==0.7.0
 anyio==4.6.1
 attrs==24.2.0
+CacheControl==0.14.1
+cachetools==5.5.0
 certifi==2024.8.30
+cffi==1.17.1
 charset-normalizer==3.4.0
 click==8.1.7
+cryptography==43.0.3
 dataclasses-json==0.6.7
 distro==1.9.0
 eval_type_backport==0.2.0
 fastapi==0.115.2
-firebase-admin==6.6.0
 filelock==3.16.1
+firebase-admin==6.6.0
 frozenlist==1.4.1
+google-api-core==2.23.0
+google-api-python-client==2.153.0
+google-auth==2.36.0
+google-auth-httplib2==0.2.0
+google-cloud-core==2.4.1
+google-cloud-firestore==2.19.0
+google-cloud-storage==2.18.2
+google-crc32c==1.6.0
+google-resumable-media==2.7.2
+googleapis-common-protos==1.66.0
 greenlet==3.1.1
+grpcio==1.68.0
+grpcio-status==1.68.0
 h11==0.14.0
 httpcore==1.0.6
+httplib2==0.22.0
 httpx==0.27.2
 idna==3.10
 jiter==0.6.1
@@ -31,6 +48,7 @@ langsmith==0.1.134
 markdown-it-py==3.0.0
 marshmallow==3.22.0
 mdurl==0.1.2
+msgpack==1.1.0
 multidict==6.1.0
 mypy-extensions==1.0.0
 numpy==1.26.4
@@ -40,17 +58,25 @@ orjson==3.10.7
 packaging==24.1
 pillow==10.4.0
 propcache==0.2.0
+proto-plus==1.25.0
+protobuf==5.28.3
 pyarrow==17.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycparser==2.22
 pydantic==2.9.2
 pydantic-settings==2.5.2
 pydantic_core==2.23.4
 Pygments==2.18.0
+PyJWT==2.9.0
+pyparsing==3.2.0
 python-dotenv==1.0.1
 PyYAML==6.0.2
 regex==2024.9.11
 requests==2.32.3
 requests-toolbelt==1.0.0
 rich==13.9.2
+rsa==4.9
 shellingham==1.5.4
 sniffio==1.3.1
 SQLAlchemy==2.0.35
@@ -63,6 +89,7 @@ tqdm==4.66.5
 typer==0.12.5
 typing-inspect==0.9.0
 typing_extensions==4.12.2
+uritemplate==4.1.1
 urllib3==2.2.3
 uvicorn==0.31.1
 yarl==1.15.1
